@@ -1,3 +1,7 @@
+2013-10-23  Pat Haugen  <pthaugen@us.ibm.com>
+
+	* gcc.target/powerpc/direct-move.h: Fix header for executable tests.
+
 2013-10-23  Jakub Jelinek  <jakub@redhat.com>
 
 	PR tree-optimization/58775
